--- a/config/settings.json
+++ b/config/settings.json
@@ -2,7 +2,7 @@
     "cartTitle": "CLOTH",
     "cartDescription": "expressCart",
     "cartLogo": "",
-    "baseUrl": "http://localhost:1111",
+    "baseUrl": "http://0.0.0.0:80",
     "emailHost": "smtp-mail.outlook.com",
     "emailPort": 587,
     "emailSecure": false,
